fix some layout issues

--- a/src/components/templates/header/Header.scss
+++ b/src/components/templates/header/Header.scss
@@ -24,6 +24,4 @@
     align-items: center;
     justify-content: space-between;
   }
-
-  z-index: 1000;
 }
